// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded 1`] = `
.c18 {
  box-sizing: border-box;
  width: 80px;
  text-align: center;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c19:active {
  opacity: 0.24;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c17 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  padding: 4px;
  color: #FFFFFF;
  font-size: 16px;
}

.c20 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c7 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c8 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c14 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c14 > thead > tr > th,
.c14 > tbody > tr > th,
.c14 > tfoot > tr > th,
.c14 > thead > tr > td,
.c14 > tbody > tr > td,
.c14 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c14 > thead > tr > th:first-child,
.c14 > tbody > tr > th:first-child,
.c14 > tfoot > tr > th:first-child,
.c14 > thead > tr > td:first-child,
.c14 > tbody > tr > td:first-child,
.c14 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c14 > thead > tr > th:last-child,
.c14 > tbody > tr > th:last-child,
.c14 > tfoot > tr > th:last-child,
.c14 > thead > tr > td:last-child,
.c14 > tbody > tr > td:last-child,
.c14 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c14 > tbody > tr > td {
  vertical-align: middle;
}

.c14 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c14 > thead > tr > th .c12 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c14 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c14 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c14 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c3 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c11 {
  background: none;
  border: none;
  cursor: pointer;
}

.c11 .c12 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c11:hover .c12,
.c11:focus .c12 {
  opacity: 1;
}

.c11:disabled {
  cursor: default;
}

.c11:disabled .c12 {
  opacity: 0.1;
}

.c6 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c4 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c5 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-right: 184px;
}

.c5:hover,
.c5:focus,
.c5:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c5::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c15 tbody > tr > td {
  vertical-align: middle;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Active Sessions
    </div>
  </div>
  <nav
    class="c3"
  >
    <div
      class="c4"
    >
      <input
        class="c5"
        placeholder="SEARCH..."
        value=""
      />
      <div
        class="c6"
      />
    </div>
    <div
      class="c7"
      width="100%"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
          color="text.contrast"
          style="white-space: nowrap; text-transform: uppercase;"
        >
          Showing 
          <strong>
            1
          </strong>
           - 
          <strong>
            5
          </strong>
           of
           
          <strong>
            5
          </strong>
        </div>
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          disabled=""
          title="Previous page"
        >
          <span
            class="c12 c13 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c11"
          disabled=""
          title="Next page"
        >
          <span
            class="c12 c13 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
  <table
    class="c14 c15"
  >
    <thead>
      <tr>
        <th>
          <a>
            Type
            <span
              class="c12 c16 icon icon-chevrons-expand-vertical "
              color="light"
              title="sort items"
            />
          </a>
        </th>
        <th>
          <a>
            Name
            <span
              class="c12 c16 icon icon-chevrons-expand-vertical "
              color="light"
              title="sort items"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Session ID
        </th>
        <th
          style="cursor: default;"
        >
          Users
        </th>
        <th>
          <a>
            Duration
            <span
              class="c12 c16 icon icon-chevron-up "
              color="light"
              title="sort items asc"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <span
            class="c12 c17 icon icon-kubernetes c12 c17"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          minikube
        </td>
        <td>
          7174aded-340a-4863-b661-7ba52aeb22c8
        </td>
        <td>
          lisa2
        </td>
        <td>
          59 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c12 c17 icon icon-terminal c12 c17"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          im-a-nodename
        </td>
        <td>
          c7befbb4-3885-4d08-a466-de832a73c3d4
        </td>
        <td>
          lisa2
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c18"
            width="80px"
          >
            <button
              class="c19"
              kind="border"
            >
              Join
              <span
                class="c12 c20 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c12 c17 icon icon-desktop c12 c17"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          desktop-2
        </td>
        <td>
          acacfbb4-3885-4d08-a466-de832a73ffac
        </td>
        <td>
          lisa2
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c12 c17 icon icon-database c12 c17"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          databse-32
        </td>
        <td>
          2314fbb4-3885-4d08-a466-de832a731222
        </td>
        <td>
          lisa2
        </td>
        <td>
          3 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c12 c17 icon icon-new-tab c12 c17"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          grafana
        </td>
        <td>
          cafefbb4-3885-4d08-a466-de832a7313131
        </td>
        <td>
          lisa2
        </td>
        <td>
          13 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`loaded with CTA 1`] = `
.c3 {
  box-sizing: border-box;
  width: 340px;
}

.c23 {
  box-sizing: border-box;
  width: 80px;
  text-align: center;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  height: 36px;
}

.c4:active {
  opacity: 0.56;
}

.c4:hover,
.c4:focus {
  background: #651FFF;
}

.c4:active {
  background: #354AA4;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c24:active {
  opacity: 0.24;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c22 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  padding: 4px;
  color: #FFFFFF;
  font-size: 16px;
}

.c25 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c14 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c15 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c17 {
  box-sizing: border-box;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c5 {
  text-transform: none;
  width: 100%;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 12px;
}

.c9 {
  color: inherit;
  font-weight: 500;
  font-size: 15px;
  margin-right: 4px;
}

.c20 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c20 > thead > tr > th,
.c20 > tbody > tr > th,
.c20 > tfoot > tr > th,
.c20 > thead > tr > td,
.c20 > tbody > tr > td,
.c20 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c20 > thead > tr > th:first-child,
.c20 > tbody > tr > th:first-child,
.c20 > tfoot > tr > th:first-child,
.c20 > thead > tr > td:first-child,
.c20 > tbody > tr > td:first-child,
.c20 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c20 > thead > tr > th:last-child,
.c20 > tbody > tr > th:last-child,
.c20 > tfoot > tr > th:last-child,
.c20 > thead > tr > td:last-child,
.c20 > tbody > tr > td:last-child,
.c20 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c20 > tbody > tr > td {
  vertical-align: middle;
}

.c20 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c20 > thead > tr > th .c7 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c20 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c20 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c20 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c10 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c18 {
  background: none;
  border: none;
  cursor: pointer;
}

.c18 .c7 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c18:hover .c7,
.c18:focus .c7 {
  opacity: 1;
}

.c18:disabled {
  cursor: default;
}

.c18:disabled .c7 {
  opacity: 0.1;
}

.c13 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c11 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c12 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-right: 184px;
}

.c12:hover,
.c12:focus,
.c12:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c12::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c21 tbody > tr > td {
  vertical-align: middle;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Active Sessions
    </div>
    <div
      class="c3"
      width="340px"
    >
      <button
        class="c4 c5"
        height="36px"
        kind="primary"
      >
        <div
          class="c6"
        >
          <span
            class="c7 c8 icon icon-unlock c9"
            color="light"
          />
          Join Active Sessions With Teleport Enterprise
        </div>
      </button>
    </div>
  </div>
  <nav
    class="c10"
  >
    <div
      class="c11"
    >
      <input
        class="c12"
        placeholder="SEARCH..."
        value=""
      />
      <div
        class="c13"
      />
    </div>
    <div
      class="c14"
      width="100%"
    >
      <div
        class="c15"
      >
        <div
          class="c16"
          color="text.contrast"
          style="white-space: nowrap; text-transform: uppercase;"
        >
          Showing 
          <strong>
            1
          </strong>
           - 
          <strong>
            5
          </strong>
           of
           
          <strong>
            5
          </strong>
        </div>
      </div>
      <div
        class="c17"
      >
        <button
          class="c18"
          disabled=""
          title="Previous page"
        >
          <span
            class="c7 c19 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c18"
          disabled=""
          title="Next page"
        >
          <span
            class="c7 c19 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
  <table
    class="c20 c21"
  >
    <thead>
      <tr>
        <th>
          <a>
            Type
            <span
              class="c7 c8 icon icon-chevrons-expand-vertical "
              color="light"
              title="sort items"
            />
          </a>
        </th>
        <th>
          <a>
            Name
            <span
              class="c7 c8 icon icon-chevrons-expand-vertical "
              color="light"
              title="sort items"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Session ID
        </th>
        <th
          style="cursor: default;"
        >
          Users
        </th>
        <th>
          <a>
            Duration
            <span
              class="c7 c8 icon icon-chevron-up "
              color="light"
              title="sort items asc"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <span
            class="c7 c22 icon icon-kubernetes c7 c22"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          minikube
        </td>
        <td>
          7174aded-340a-4863-b661-7ba52aeb22c8
        </td>
        <td>
          lisa2
        </td>
        <td>
          59 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c7 c22 icon icon-terminal c7 c22"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          im-a-nodename
        </td>
        <td>
          c7befbb4-3885-4d08-a466-de832a73c3d4
        </td>
        <td>
          lisa2
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c23"
            width="80px"
          >
            <button
              class="c24"
              kind="border"
            >
              Join
              <span
                class="c7 c25 icon icon-caret-down "
                color="text.slightlyMuted"
                font-size="2"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c7 c22 icon icon-desktop c7 c22"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          desktop-2
        </td>
        <td>
          acacfbb4-3885-4d08-a466-de832a73ffac
        </td>
        <td>
          lisa2
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c7 c22 icon icon-database c7 c22"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          databse-32
        </td>
        <td>
          2314fbb4-3885-4d08-a466-de832a731222
        </td>
        <td>
          lisa2
        </td>
        <td>
          3 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c7 c22 icon icon-new-tab c7 c22"
            color="light"
            font-size="3"
          />
        </td>
        <td>
          grafana
        </td>
        <td>
          cafefbb4-3885-4d08-a466-de832a7313131
        </td>
        <td>
          lisa2
        </td>
        <td>
          13 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
    </tbody>
  </table>
</div>
`;
